changed meta image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <meta name="description" content="MGX metagenome analysis platform" />
 <meta property="og:title" content="MGX metagenome analysis platform" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="" />
-<meta property="og:image" content="" />
+<meta property="og:url" content="https://github.com/MGX-metagenomics" />
+<meta property="og:image" content="/images/mgx_logo_crapola.svg" />
 <meta property="og:description" content="MGX metagenome analysis platform" />
 <meta name="twitter:card" content="" />
 <meta name="twitter:site" content="" />
